// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AutomatedChecksView renders device disconnected 1`] = `
<div
  className="automatedChecksView"
>
  <TitleBar
    deps={
      Object {
        "scanActionCreator": proxy {
          "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
          "scanActions": undefined,
        },
      }
    }
  />
  <CommandBar
    deps={
      Object {
        "scanActionCreator": proxy {
          "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
          "scanActions": undefined,
        },
      }
    }
  />
  <main>
    <HeaderSection />
    <ScanningSpinner
      isScanning={false}
    />
    <DeviceDisconnectedPopup
      deviceName="TEST DEVICE"
      onConnectNewDevice={[Function]}
      onRescanDevice={[Function]}
    />
  </main>
</div>
`;

exports[`AutomatedChecksView renders results 1`] = `
<div
  className="automatedChecksView"
>
  <TitleBar
    deps={
      Object {
        "getUnifiedRuleResultsDelegate": [Function],
        "scanActionCreator": proxy {
          "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
          "scanActions": undefined,
        },
      }
    }
  />
  <CommandBar
    deps={
      Object {
        "getUnifiedRuleResultsDelegate": [Function],
        "scanActionCreator": proxy {
          "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
          "scanActions": undefined,
        },
      }
    }
  />
  <main>
    <HeaderSection />
    <ScanningSpinner
      isScanning={false}
    />
    <CardsView
      deps={
        Object {
          "getUnifiedRuleResultsDelegate": [Function],
          "scanActionCreator": proxy {
            "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
            "scanActions": undefined,
          },
        }
      }
      ruleResultsByStatus={
        Object {
          "fail": Array [
            Object {
              "id": "test-fail-id",
            },
          ],
        }
      }
      targetAppInfo={
        Object {
          "name": "test-target-app-name",
        }
      }
      userConfigurationStoreData={
        Object {
          "isFirstTime": false,
        }
      }
    />
  </main>
</div>
`;

exports[`AutomatedChecksView renders scanning spinner 1`] = `
<div
  className="automatedChecksView"
>
  <TitleBar
    deps={
      Object {
        "scanActionCreator": proxy {
          "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
          "scanActions": undefined,
        },
        "windowFrameActionCreator": proxy {
          "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
          "windowFrameActions": undefined,
        },
        "windowStateActionCreator": proxy {
          "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
          "windowFrameActionCreator": undefined,
          "windowStateActions": undefined,
        },
      }
    }
    windowStateStoreData={
      Object {
        "currentWindowState": "customSize",
      }
    }
  />
  <CommandBar
    deps={
      Object {
        "scanActionCreator": proxy {
          "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
          "scanActions": undefined,
        },
        "windowFrameActionCreator": proxy {
          "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
          "windowFrameActions": undefined,
        },
        "windowStateActionCreator": proxy {
          "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
          "windowFrameActionCreator": undefined,
          "windowStateActions": undefined,
        },
      }
    }
  />
  <main>
    <HeaderSection />
    <ScanningSpinner
      isScanning={true}
    />
  </main>
</div>
`;
